tests/script_errors/invalid_extractor/error.txt
Error: 
    1 | match ecent of
    2 |   case %{ key ~= re|(| } => true
      |                  ^^^^^ Invalid tilde predicate pattern: regex parse error:
    (
    ^
error: unclosed group
    3 | end
